added a text input that you can drag onto the table.

--- a/Angular-Form-Builder/src/app/app.component.html
+++ b/Angular-Form-Builder/src/app/app.component.html
@@ -2,7 +2,10 @@
   type="text"
   draggable="true"
   placeholder="Text Input"
+  (dragstart)="onDragStart(DraggedElementType.text)"
 />
 
 
-<section></section>
+<section
+  [draggedElementType]="draggedElementType">
+</section>
