--- a/Angular-Form-Builder/src/app/section/section.component.html
+++ b/Angular-Form-Builder/src/app/section/section.component.html
@@ -26,8 +26,8 @@
           class="draggable-element"
           draggable="true"
           (dragstart)="onDragStart($event, colIndex, rowIndex)"
+          [innerHtml]="element[column]"
           >
-          {{ element[column] }}
         </div>
 
         <div
