--- a/Angular-Form-Builder/src/app/section/section.component.scss
+++ b/Angular-Form-Builder/src/app/section/section.component.scss
@@ -5,26 +5,41 @@
 
 .above-droppable {
   padding: 20px;
+  width: 90%;
+  background: blue;
 }
 
 .below-droppable {
   padding: 20px;
+  width: 90%;
+  margin-top: 20px;
+  background: green;
 }
 
 .left-droppable {
   float: left;
-  padding: 20px;
-}
-
-.draggable-element {
-  float: left;
+  padding: 10px;
+  width: 8%;
+  background: orange;
 }
 
 .right-droppable {
   float: left;
-  padding: 20px;
+  padding: 10px;
+  width: 8%;
+  background: pink;
 }
 
+.draggable-element {
+  float: left;
+  width: 73.5%;
+  border: solid black;
+}
+
+.input-field {
+  width: 100%;
+  height: 100%;
+}
 
 table {
   width: 100%;
