--- a/Angular-Form-Builder/src/app/section/section.component.scss
+++ b/Angular-Form-Builder/src/app/section/section.component.scss
@@ -30,6 +30,13 @@
   background: pink;
 }
 
+.all-droppable {
+  float: left;
+  padding: 46px;
+  width: 85%;
+  background: gray;
+}
+
 .draggable-element {
   float: left;
   width: 73.5%;
