Reorganizing folders/components. Fixing how new items show up.

--- a/Angular-Form-Builder/src/app/app.component.html
+++ b/Angular-Form-Builder/src/app/app.component.html
@@ -1,58 +1,1 @@
-<input
-  type="text"
-  draggable="true"
-  placeholder="Text Input"
-  (dragstart)="onDragNewItemStart(DraggedElementType.text)"
-/>
-
-<br><br>
-
-<input
-  type="number"
-  draggable="true"
-  placeholder="Number Input"
-  (dragstart)="onDragNewItemStart(DraggedElementType.number)"
-/>
-
-<br><br>
-
-<div draggable="true" (dragstart)="onDragNewItemStart(DraggedElementType.dateTime)">
-  <input type="date" />
-  <input type="time" />
-</div>
-
-<div *ngFor="let section of allSections; let i = index;">
-  <div
-    class="section-droppable"
-    (dragover)="onDragOver($event, i - 1)"
-    (dragend)="onDragLeave($event)"
-    (drop)="onDropSection()"
-  ></div>
-
-  <section
-    class="section-border"
-    draggable="true"
-    (dragstart)="onDragSection(i)"
-    [section]="section"
-    [typeOfDraggedElement]="draggedElementType"
-    [itemChangedFromSettings]="selectedItemChanged"
-    [itemMovedFromOtherSection]="itemToAddToOtherSection"
-    (dragBetweenSections)="setDataForDragBetweenSections($event)"
-    (selectedItem)="onSelectedItemChange($event)"
-    (removeFromSectionItemCameFrom)="removeItem($event)"
-    >
-  </section>
-
-  <div
-    class="section-droppable"
-    (dragover)="onDragOver($event, i + 1)"
-    (dragend)="onDragLeave($event)"
-    (drop)="onDropSection()"
-  ></div>
-</div>
-
-<br><br>
-<settings
-  [item]="selectedItem"
-  (updatedItem)="onUpdateSelectedItem($event)">
-</settings>
+<form-builder></form-builder>
