Fix item settings panel for date time and multi/single select. Settings panel now shows the right data and mirrors what's above and vice versa.

--- a/Angular-Form-Builder/src/app/form-builder/settings/settings.component.html
+++ b/Angular-Form-Builder/src/app/form-builder/settings/settings.component.html
@@ -23,4 +23,55 @@
     </span>
   </div>
 
+  <div *ngIf="item.type === DraggedElementType.dateTime">
+    <span>Date: </span>
+    <span>
+      <input
+        type='date'
+        [(ngModel)]='$any(item.value).date'
+        (ngModelChange)="updateItem()" />
+    </span>
+
+    <div>
+      <span>Time: </span>
+      <input
+        type="time" 
+        [(ngModel)]='$any(item.value).time'
+        (ngModelChange)="updateItem()" />
+    </div>
+  </div>
+
+  <div *ngIf="item.type === DraggedElementType.multiSelect">
+    <span>Options: </span>
+    <div *ngFor="let option of $any(item.value)">
+      <span>
+        <input
+          type='checkbox'
+          [(ngModel)]='option.checked'
+          (ngModelChange)="updateItem()" />
+
+          <input
+            placeholder="Enter Option"
+            [(ngModel)]='option.value'
+            (ngModelChange)="updateItem()" />
+      </span>
+
+    </div>
+  </div>
+
+  <div *ngIf="item.type === DraggedElementType.singleSelect">
+    <span>Options: </span>
+    <div *ngFor="let option of $any(item.value); let i = index;">
+      <span>
+        <mat-radio-button
+          [value]="option.checked"
+          [checked]="option.checked"
+          (change)="updateItem(true, i)">
+          <input [(ngModel)]="option.value" (ngModelChange)="updateItem()" />
+        </mat-radio-button>
+      </span>
+
+    </div>
+  </div>
+
 </div>
